--- a/R/01_regressions.Rmd
+++ b/R/01_regressions.Rmd
@@ -89,7 +89,11 @@ data %<>%
 data %<>%
   filter(year >= 2000,
          year <= 2021) %>%
-  mutate(co_author_industry = deg_cen_comp > 0) #,year_min = ifelse(year_min < 2000, 2000, year_min))
+  mutate(co_author_industry = deg_cen_comp > 0) %>% #,year_min = ifelse(year_min < 2000, 2000, year_min))
+    group_by(AID) %>%
+  mutate(t = 1:n(),
+         t_max = n()) %>%
+  ungroup()
 ```
 
 ```{r}
@@ -112,10 +116,6 @@ XXXXXXXXXXXXXXXXx
 
 ```{r}
 data_surv <- data %>% 
-  # add the time
-  group_by(AID) %>%
-  mutate(t = 1:n()) %>%
-  ungroup() %>%
   # Filter for last observation (=right cernsoring or transition)
   filter(is.na(transited_t) | transited_t <= 1) %>%
   group_by(AID) %>%
@@ -250,7 +250,7 @@ library(MatchIt)
 ```
 
 ```{r}
-data_static <- read_rds('../../temp/data_author_static.rds')
+#data_static <- read_rds('../../temp/data_author_static.rds')
 ```
 
 Matching strategy:
@@ -264,81 +264,58 @@ Matching strategy:
 ```{r}
 data_match <- data %>%
   filter(type == 'education' | type == 'switcher' & transition == 1) %>%
-  select(AID, type, year, aff_id, seniority, paper_n, author_mean, oa_mean, concepts, citation_fw, novelty_fw) %>%
-  mutate(type = (type %>% factor() %>% as.numeric()) -1) 
+  select(AID, type, year, aff_id, seniority, paper_n, author_mean, oa_mean, concepts, citation_fw, novelty_fw, aff_citation_fw, aff_novelty_fw) %>%
+  mutate(type = (type %>% factor() %>% as.numeric()) -1,
+         concepts = concepts %>% factor()) %>%
+  drop_na()
 ```
 
-
+TODO: Check if the factor is right
 
 ```{r}
 set.seed(1337)
 match_out <-  data_match %>% 
   # Matching
-  matchit(type ~ aff_id + paper_n + author_mean + oa_mean + concepts + citation_fw + novelty_fw, exact = c('year', 'seniority'),
+  matchit(type ~ paper_n + author_mean + oa_mean + concepts + citation_fw + novelty_fw, exact = c('year', 'seniority'),
           data = ., verbose = FALSE, method = "nearest", ratio = 1) # OR method  "genetic" ... takes forever.....
 ```
 
-```{r}
-# Match table for use lateron
-match_data <- match_out %>% 
-  match.data() %>% 
-  as_tibble() %>% 
-  select(author_id, distance, weights)
-```
 
 ```{r}
 matched_pairs  <- bind_cols(data_match[row.names(match_out$match.matrix),"AID"] , data_match[match_out$match.matrix,"AID"] ) %>%
   rename(orig_AID = `AID...1`,
-         author_AID = `AID...2`) 
+         match_AID = `AID...2`) 
 ```
 
 ```{r}
-# Get the time where the matched switcher transits
-matched_pairs %<>%
-  left_join(data %>% filter(switch == TRUE) %>% select(author_id, time) %>% distinct(author_id, .keep_all = TRUE), by = c('orig_AID' = 'AIDd')) %>%
-  mutate(switch = TRUE) %>%
-  drop_na() 
+data_did <- matched_pairs %>% 
+  mutate(pair_id = 1:n())
+
+data_did <- data_did %>%
+  select(orig_AID, pair_id) %>%
+  rename(AID = orig_AID) %>%
+  bind_rows(data_did %>%
+  select(match_AID, pair_id) %>%
+  rename(AID = match_AID) ) %>%
+  arrange(pair_id) %>%
+  left_join(data, by = 'AID')
 ```
 
+```{r}
+# compute transition point for matched partner
+data_did %<>%
+  group_by(pair_id) %>%
+  mutate(year_transit = max(year_transit, na.rm = TRUE),
+         transition = year == year_transit,
+         transited = year >= year_transit,
+         transited_t = year - year_transit + 1) 
+```
+
+```{r}
+data_did %>% saveRDS('../../temp/reg_data_did.rds')
+```
 
 # Diff-in-Diff
-
-## Preprocessing
-```{r}
-# Filter only NN matched author pairs
-data_did <- data %>%
-  semi_join(match_data, by = 'author_id')
-
-# Update the corresponding transition time of university by their matched switcher
-data_did %<>%
-  rows_update(matched_pairs %>% select(-orig_author_id), by = c('author_id', 'time'))
-
-# Update Transited
-data_did %<>%
-  mutate(transited = NA) %>%
-  group_by(author_id) %>%
-  mutate(transited = ifelse(lag(switch, 1) == TRUE, TRUE, transited)) %>%
-  fill(transited, .direction = 'down') %>%
-  replace_na(list('transited' = FALSE)) %>%
-  ungroup()
-```
-
-```{r}
-# Some extra variables
-data_did %<>%
-  group_by(author_id) %>%
-  mutate(switcher = author_type == 'switcher',
-         transited_t = ifelse(transited == TRUE, 1, 0)) %>%
-  mutate(transited_t = transited_t %>%cumsum()) %>%
-  ungroup()
-```
-
-```{r}
-# Nicer ordering
-data_did %<>%
-  relocate(author_id, author_type, gender, year, time, switch, transited, transited_t, citation_rank, cit_n_cum, paper_n) %>%
-  arrange(author_id, time)
-```
 
 ```{r}
 # For the interaction plot code logical to numeric
@@ -346,39 +323,41 @@ data_did %<>%
 ```
 
 ```{r}
-data_did %>% saveRDS('../../temp/reg_data_did.rds')
+data %<>%
+  mutate(year = year %>% factor(),
+         concepts = concepts %>% factor())
 ```
+
 
 ## Models
 
 ```{r}
 # fit_did_0 <- lm(citation_rank ~ switcher + field_of_study_name, data = data_did)
 
-fit_did_0 <- lm(citation_rank ~ (switcher + transited)^2 + field_of_study_name + year + seniority + gender + field_of_study_name
-                , data = data_did)
-fit_did_1 <- lm(citation_rank ~ (switcher + transited)^2 + field_of_study_name + year + seniority + gender + field_of_study_name + cent_dgr + cent_dgr_ind
-                , data = data_did)
-fit_did_2 <- lm(citation_rank ~ (switcher + transited)^2 + field_of_study_name + year + seniority + gender + field_of_study_name + (switcher + transited_t)^2
-                , data = data_did)
-fit_did_3 <- lm(citation_rank ~ (switcher + transited)^2 + field_of_study_name + year + seniority + gender + field_of_study_name + (switcher + transited_t)^2 + cent_dgr + cent_dgr_ind 
-                , data = data_did)
+fit_did_1 <- lm(citation_fw ~ (type + transited)^2 + year + seniority + year + concepts, 
+                data = data_did)
+
+fit_did_2 <- lm(citation_fw ~ (type + transited)^2 + (transited + transited_t)^2 + year + seniority + year + concepts + transited_t, 
+                data = data_did)
+
+fit_did_3 <- lm(novelty_fw ~ (type + transited)^2 + year + seniority + year + concepts, 
+                data = data_did)
+
+fit_did_4 <- lm(novelty_fw ~ (type + transited)^2 + (transited + transited_t)^2 + year + seniority + year + concepts + transited_t, 
+                data = data_did)
 
 # + paper_n ?
 ```
 
 ```{r}
-stargazer(fit_did_0, fit_did_1, fit_did_2, fit_did_3, type = 'text',
-          omit = c('field_of_study_name', 'year', 'Constant'))
+stargazer(fit_did_1, fit_did_2, fit_did_3, fit_did_4, type = 'text',
+          omit = c('concepts', 'year', 'Constant'))
 ```
 
-```{r}
-stargazer(fit_did_0, fit_did_1, fit_did_2, fit_did_3, type = 'text',
-          omit = c('field_of_study_name', 'year', 'Constant'))
-```
 
 ```{r}
-stargazer(fit_did_0, fit_did_1, fit_did_2, fit_did_3, type = 'latex',
-          omit = c('field_of_study_name', 'year', 'Constant'))
+# stargazer(fit_did_0, fit_did_1, fit_did_2, fit_did_3, fit_did_4, type = 'latex',
+#          omit = c('concepts', 'year', 'Constant'))
 ```
 
 
