--- a/R/01_regressions.Rmd
+++ b/R/01_regressions.Rmd
@@ -283,6 +283,7 @@ data_did %<>%
          transited_t = year - year_transit + 1,
          year = year %>% factor(),
          concepts = concepts %>% factor()) %>%
+  mutate(transited_t = ifelse(transited_t > 0, transited_t, 0)) %>%
   drop_na()
 ```
 
@@ -311,13 +312,13 @@ data_did %>% saveRDS('../../temp/reg_data_did.rds')
 fit_did_1 <- lm(citation_fw ~ (type + transited)^2 + year + t + seniority + year + concepts, 
                 data = data_did)
 
-fit_did_2 <- lm(citation_fw ~ (type + transited)^2 + transited:transited_t + year + t + seniority + year + concepts + transited_t, 
+fit_did_2 <- lm(citation_fw ~ (type + transited)^2 + transited*transited_t + year + t + seniority + year + concepts + transited_t, 
                 data = data_did)
 
 fit_did_3 <- lm(novelty_fw ~ (type + transited)^2 + year + seniority + year + t + concepts, 
                 data = data_did)
 
-fit_did_4 <- lm(novelty_fw ~ (type + transited)^2 + transited:transited_t + year + t + seniority + concepts + transited_t, 
+fit_did_4 <- lm(novelty_fw ~ (type + transited)^2 + transited*transited_t + year + t + seniority + concepts , 
                 data = data_did)
 
 # + paper_n ?
@@ -328,7 +329,7 @@ fit_did_4 <- lm(novelty_fw ~ (type + transited)^2 + transited:transited_t + year
 ```
 
 ```{r}
-# stargazer(fit_did_1, fit_did_2, fit_did_3, fit_did_4, type = 'text', omit = c('concepts', 'year', 'Constant'))
+stargazer(fit_did_1, fit_did_2, fit_did_3, fit_did_4, type = 'text', omit = c('concepts', 'year', 'Constant'))
 ```
 
 ```{r, results='asis'}
