--- a/R/01_regressions.Rmd
+++ b/R/01_regressions.Rmd
@@ -102,11 +102,28 @@ data  %>% naniar::gg_miss_var()
 ```
 
 ```{r}
+# Replace again missing
+data %<>%   
+  group_by(AID) %>%
+    arrange(AID, year) %>%
+    fill(DL, concepts, 
+         aff_id, aff_type, aff_novelty_fw, aff_citation_fw, 
+         novelty_fw, citation_fw, paper_n, oa_mean, novelty_mean, deg_cen_comp, deg_cen, # IS not really correct, but can be done. Consider
+         co_author_industry, citation_n, author_mean, # IS not really correct, but can be done. Consider
+         .direction = "downup") %>%
+  ungroup() 
+```
+
+```{r}
 # Replace NA. All others are by construction
 data %<>%
   replace_na(list(DL = 0, concepts = 'unknown'))
 ```
 
+```{r}
+data %>% count(concepts, sort = TRUE) %>% 
+  mutate(rank_pct = percent_rank(n))
+```
 
 # Survival analysis
 
@@ -235,9 +252,12 @@ library(MatchIt)
 ```{r}
 data_match <- data %>%
   filter(type == 'education' | type == 'switcher' & transition == 1) %>%
-  select(AID, type, year, aff_id, seniority, paper_n, author_mean, oa_mean, concepts, citation_fw, novelty_fw, aff_citation_fw, aff_novelty_fw) %>%
+  left_join(read_rds('../../temp/author_concepts_main.rds') %>% select(AID, concepts) %>% rename(concept_main = concepts), by = 'AID') %>%
+  select(-transition, -transited_t, -year_transit) %>%
   mutate(type = (type %>% factor() %>% as.numeric()) -1,
-         concepts = concepts %>% factor()) %>%
+         aff_id = aff_id %>% factor(),
+         concepts = concepts %>% factor(),
+         concept_main = concept_main %>% factor()) %>%
   drop_na()
 ```
 
@@ -246,7 +266,7 @@ data_match <- data %>%
 set.seed(1337)
 match_out <-  data_match %>% 
   # Matching
-  matchit(type ~ paper_n + author_mean + oa_mean + concepts + citation_fw + novelty_fw, exact = c('year', 'seniority'),
+  matchit(type ~ paper_n + author_mean + oa_mean + DL + t + t_max + co_author_industry + aff_citation_fw + aff_citation_fw, exact = c('year', 'seniority', 'concept_main'),
           data = ., verbose = FALSE, method = "nearest", ratio = 1) # OR method  "genetic" ... takes forever.....
 ```
 
@@ -283,7 +303,8 @@ data_did %<>%
          transited_t = year - year_transit + 1) %>%
   mutate(across(c(year, concepts, transited), ~ factor(.x))) %>%
   mutate(transited_t = ifelse(transited_t > 0, transited_t, 0)) %>%
-  drop_na()
+  drop_na() %>%
+  ungroup()
 ```
 
 ```{r}
@@ -293,14 +314,24 @@ data_did %>% saveRDS('../temp_reg/reg_data_did.rds')
 # Diff-in-Diff
 
 ```{r}
+# Delete all objects
+rm(list = ls(all.names = TRUE)) #will clear all objects includes hidden objects.
+gc() #free up memrory and report the memory usage.
+
 data_did <- read_rds('../temp_reg/reg_data_did.rds')
 ```
-
 
 ```{r}
 # For the interaction plot code logical to numeric
 # data_did %<>%  mutate(switcher = switcher %>% as.numeric(), transited = transited %>% as.numeric())
 ```
+
+```{r}
+data_did %>% 
+  count(concepts, sort = TRUE) %>% 
+  mutate(rank_pct = percent_rank(n))
+```
+
 
 
 ## Models
@@ -308,16 +339,16 @@ data_did <- read_rds('../temp_reg/reg_data_did.rds')
 ```{r}
 # fit_did_0 <- lm(citation_rank ~ switcher + field_of_study_name, data = data_did)
 
-fit_did_1 <- lm(citation_fw ~ (type + transited)^2 + year + seniority + year + concepts, 
+fit_did_1 <- lm(citation_fw ~ (type + transited)^2 + year + seniority + year, # + concepts, 
                 data = data_did)
 
-fit_did_2 <- lm(citation_fw ~ (type + transited)^2 + (type + transited_t)^2 + year  + seniority + year + concepts, 
+fit_did_2 <- lm(citation_fw ~ (type + transited)^2 + (type + transited_t)^2 + year  + seniority, # + concepts, 
                 data = data_did)
 
-fit_did_3 <- lm(novelty_fw ~ (type + transited)^2 + year + seniority + year + concepts, 
+fit_did_3 <- lm(novelty_fw ~ (type + transited)^2 + year + seniority + year, # + concepts, 
                 data = data_did)
 
-fit_did_4 <- lm(novelty_fw ~ (type + transited)^2 + (type + transited_t)^2 + year + seniority + concepts , 
+fit_did_4 <- lm(novelty_fw ~ (type + transited)^2 + (type + transited_t)^2 + year + seniority, # + concepts , 
                 data = data_did)
 
 # + paper_n ?
@@ -328,12 +359,13 @@ fit_did_4 <- lm(novelty_fw ~ (type + transited)^2 + (type + transited_t)^2 + yea
 ```
 
 ```{r}
-stargazer(fit_did_1, fit_did_2, fit_did_3, fit_did_4, type = 'text', omit = c('concepts', 'year', 'Constant'))
+stargazer(fit_did_1, fit_did_2, fit_did_3, fit_did_4, type = 'text', omit = c('year', 'Constant'))
 ```
 
 ```{r, results='asis'}
-stargazer(fit_did_1, fit_did_2, fit_did_3, fit_did_4, type = 'html', omit = c( 'concepts', 'year', 'Constant'))
+stargazer(fit_did_1, fit_did_2, fit_did_3, fit_did_4, type = 'html', omit = c('year', 'Constant'))
 ```
+
 
 
 <!---
