--- a/Stats/Fig1.Rmd
+++ b/Stats/Fig1.Rmd
@@ -66,8 +66,8 @@ colors <- c("AI publications" = "#1f77b4", "share OpenAlex" = "#ff7f0e")
 
 
 figa = ggplot(df, aes(x = year)) + 
-  geom_line(linewidth=1.25,aes(y = ai_publications, color='ai_publications')) + 
-  geom_line(linewidth=1.25,aes(y = share*6768480, color='ai_share')) +
+  geom_line(linewidth=1,aes(y = ai_publications, color='ai_publications')) + 
+  geom_line(linewidth=1,aes(y = share*6768480, color='ai_share')) +
   scale_color_manual(name = "Group",
                      values = c( "ai_publications" = "#1f77b4", "ai_share" = "black"),
                      labels = c( "AI publications","Share AI publications")) +
@@ -88,7 +88,7 @@ figa = ggplot(df, aes(x = year)) +
       legend.position="top",
       legend.text=element_text(size = 6)) +
   scale_y_continuous(
-    name = "Number of publications",
+    name = "Publications",
     sec.axis = sec_axis(~./6768480, name="Share")
   )
 
@@ -110,8 +110,8 @@ colors <- c("Solo authors" = "#1f77b4", "Company participation" = "#ff7f0e")
 
 
 figb = ggplot(df, aes(x = year)) + 
-  geom_line(size=1.25,aes(y = share_solo_authors, color='share_solo_authors')) + 
-  geom_line(size=1.25,aes(y = share_companies*3, color='share_companies')) +
+  geom_line(size=1,aes(y = share_solo_authors, color='share_solo_authors')) + 
+  geom_line(size=1,aes(y = share_companies*3, color='share_companies')) +
   scale_color_manual(name = "Group",
                      values = c( "share_solo_authors" = "#1f77b4", "share_companies" = "#ff7f0e"),
                      labels = c( "Comp participation","Share solo aut")) +
@@ -133,7 +133,7 @@ figb = ggplot(df, aes(x = year)) +
       legend.text=element_text(size = 6)) +
   scale_y_continuous(
     name = "Share solo aut",
-    sec.axis = sec_axis(~./3, name="Share comp")
+    sec.axis = sec_axis(~./3, name="Share Ind.")
   )
 
 figb
@@ -145,13 +145,13 @@ colors <- c("Solo authors" = "#1f77b4", "Company participation" = "#ff7f0e")
 
 
 figb = ggplot(df, aes(x = year)) + 
-  geom_line(size=1.25,aes(y = share_solo_authors, color='share_solo_authors')) + 
-  geom_line(size=1.25,aes(y = share_companies, color='share_companies')) +
+  geom_line(size=1,aes(y = share_solo_authors, color='share_solo_authors')) + 
+  geom_line(size=1,aes(y = share_companies, color='share_companies')) +
   scale_color_manual(name = "Group",
                      values = c( "share_solo_authors" = "#1f77b4", "share_companies" = "#ff7f0e"),
-                     labels = c( "Comp participation","Share solo aut")) +
+                     labels = c( "Ind. participation","Share solo aut")) +
   labs(x = "Year",
-         y = "(%)",
+         y = "Share",
          color = "Legend") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1, size = 6),
       axis.text.y = element_text(size = 6),
@@ -179,13 +179,13 @@ df <- read_csv("../Data/Fig1_c.csv")
 oma2 <- c(0.3,0,0,0.3)
 
 figc = ggplot(df, aes(x = year)) + 
-  geom_line(size=1.25,aes(y = education_company, color='education_company')) + 
-  geom_line(size=1.25,aes(y = company_education, color='company_education')) +
+  geom_line(size=1,aes(y = education_company, color='education_company')) + 
+  geom_line(size=1,aes(y = company_education, color='company_education')) +
   scale_color_manual(name = "Group",
                      values = c( "education_company" = "blue", "company_education" = "red"),
-                     labels = c( "Comp to edu","Edu to comp")) +
+                     labels = c( "Ind. to Edu","Edu to Ind.")) +
   labs(x = "Year",
-         y = "Number of researcher",
+         y = "Researchers",
          color = "Legend") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1, size = 6),
       axis.text.y = element_text(size = 6),
@@ -228,7 +228,7 @@ ggplot(data = vaccinations,
 figd <- ggplot(data = df,
        aes(axis1 = education, axis2 = company, y = value)) +
   geom_alluvium(aes(fill = company)) +
-  geom_stratum() +
+  geom_stratum(alpha=0.5) +
   geom_text(stat = "stratum",
             aes(label = after_stat(stratum)),
             size= 1.75) +
@@ -257,23 +257,7 @@ theme(plot.margin = margin(0.1,0.1,2,0.1, "cm"))
 fig1
 
 ```
-```{r} 
 
-figure <- ggarrange(figb, figb, figc, figd,
-                    labels = c("A", "B", "C","D"),
-                    ncol = 2, nrow = 2)
-figure
-
-ggarrange(
-                  # First row with line plot
-  # Second row with box and dot plots
-  ggarrange(figb, figb,figc, ncol = 3, labels = c("A","B", "C")),
-  figd,
-  nrow = 2, 
-  labels = "D"       # Label of the line plot
-  ) 
-
-```
 
 
 ```{r}
